--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -1,1 +1,30 @@
+name: 'Build and Deploy'
+on: 
+ push:
+   branches:
+     - main
+ pull_request:
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [18.x]
+        
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: use node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        registry-url: https://registry.npmjs.org/ # Needed for auth
+        
+    - name: Install yarn
+      run: yarn install
+
+    - name: Build yarn
+      run: yarn build  
