--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -21,6 +21,8 @@ jobs:
         
     - name: Install yarn
       run: yarn install
+      working-directory: backstageal
 
     - name: Build yarn
-      run: yarn build  
+      run: yarn build
+      working-directory: backstageal
