--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -22,7 +22,7 @@ jobs:
     - name: Install yarn
       run: yarn install
       working-directory: backstageal
-
-    - name: Build yarn
-      run: yarn build
-      working-directory: backstageal
+      
+    - uses: Azure/login@v1
+      with:
+        creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
