--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -39,6 +39,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: './backstageal'
-        file: ./backstageal/Dockerfile
+        file: ./backstageal/packages/backend/Dockerfile
         push: true
-        tags: cortexmodel.azurecr.io/backstage:${{ github.sha }}      
+        tags: backstagerp.azurecr.io      
