--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -42,6 +42,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: './backstageal'
-        file: ./backstageal/Dockerfile
+        file: ./backstageal/Dockerfile.dockerbuild
         push: true
         tags: backstagerp.azurecr.io      
