--- a/backstageal/Dockerfile.dockerbuild
+++ b/backstageal/Dockerfile.dockerbuild
@@ -51,8 +51,8 @@ FROM nginx:mainline
 RUN apt-get update && apt-get -y install jq && rm -rf /var/lib/apt/lists/*
 
 COPY --from=build /app/packages/app/dist /usr/share/nginx/html
-COPY docker/default.conf.template /etc/nginx/templates/default.conf.template
+COPY default.conf.template /etc/nginx/templates/default.conf.template
 
-COPY docker/inject-config.sh /docker-entrypoint.d/40-inject-config.sh
+COPY inject-config.sh /docker-entrypoint.d/40-inject-config.sh
 
 ENV PORT 80
