--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -31,8 +31,8 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
           
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2       
+    # - name: Set up Docker Buildx
+    #  uses: docker/setup-buildx-action@v2       
           
     - name: Build and push
       uses: docker/build-push-action@v4
@@ -40,4 +40,7 @@ jobs:
         context: './backstageal'
         file: ./backstageal/Dockerfile.dockerbuild
         push: true
-        tags: backstagerp.azurecr.io/backstage:${{ github.sha }}      
+        tags: backstagerp.azurecr.io/backstage:${{ github.sha }}
+        
+        
+        
