--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -55,8 +55,8 @@ jobs:
     - uses: azure/k8s-deploy@v1
       with:
         manifests: |
-          manifests/deployment.yml
-          manifests/service.yml
+          manifests/deployment.yaml
+          manifests/service.yaml
         images: |
           backstagerp.azurecr.io/backstage:${{ github.sha }}
         imagepullsecrets: |
