--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -19,17 +19,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
         registry-url: https://registry.npmjs.org/ # Needed for auth
         
-    - uses: Azure/login@v1
+    - uses: azure/login@v1
       with:
-        creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
-        allow-no-subscriptions: true
-        
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
     - uses: azure/aks-set-context@v3
       with:
        resource-group: backstage
-       cluster-name: backstageaks
-       admin: 'false'
-       use-kubelogin: 'true'    
+       cluster-name: backstageaks    
         
     - name: 'acr details'
       uses: azure/docker-login@v1
