--- a/.github/workflows/Backstage.yaml
+++ b/.github/workflows/Backstage.yaml
@@ -1,6 +1,10 @@
 name: 'Build and Deploy'
 on: [push]
 
+permissions:
+      id-token: write
+      contents: read
+      
 jobs:
   build:
     runs-on: ubuntu-latest
