--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,8 @@ variables:
   tag: '$(Build.BuildId)'
   imagePullSecret: 'backstagerp501c-auth'
 
-  # Agent VM image name
-  vmImageName: 'bapool'
+  pool:
+  name: bapool
 
 
 stages:
@@ -28,8 +28,6 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -51,8 +49,6 @@ stages:
   jobs:
   - deployment: Deploy
     displayName: Deploy
-    pool:
-      vmImage: $(vmImageName)
     environment: 'adityasneoBackstageAzure.backstage'
     strategy:
       runOnce:
