Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,7 @@ variables:
   tag: '$(Build.BuildId)'
   imagePullSecret: 'backstagerp501c-auth'
 
-  pool:
-  name: bapool
+  pool: bapool
 
 
 stages:
