--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,14 @@ variables:
 
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '25fbf834-d187-4e53-8118-3b8677b68b96'
-  imageRepository: 'adityasneobackstageazure'
+  imageRepository: 'backstageazure'
   containerRegistry: 'backstagerp.azurecr.io'
   dockerfilePath: '**/Dockerfile'
   tag: '$(Build.BuildId)'
   imagePullSecret: 'backstagerp19508349-auth'
 
-pool: bapool
+  pool:
+  name: bapool
 
 stages:
 - stage: Build
