--- a/.github/workflows/Terraform.yaml
+++ b/.github/workflows/Terraform.yaml
@@ -27,27 +27,21 @@ jobs:
         
     # initializes a working directory  
     - name: Terraform Init
-      id: init
       run: terraform init  
+      working-directory: ./Terraform
       
     # validate the syntax  
     - name: Terraform Validate
-      id: validate
-      run: terraform validate -no-color 
+      run: terraform validate 
+      working-directory: ./Terraform
       
     # preview the changes in Configuration files   
     - name: Terraform Plan
-      id: plan
-      if: github.event_name == 'pull_request'
-      run: terraform plan -no-color -input=false
-      continue-on-error: true
+      run: terraform plan 
+      working-directory: ./Terraform
       
-    # Status of the Terraform Plan  
-    - name: Terraform Plan Status
-      if: steps.plan.outcome == 'failure'
-      run: exit 1   
       
     # Creats the Infra Resource  
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
+      working-directory: ./Terraform
