--- a/.github/workflows/Terraform.yaml
+++ b/.github/workflows/Terraform.yaml
@@ -43,5 +43,5 @@ jobs:
       
     # Creats the Infra Resource  
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false
+      run: terraform apply -auto-approve 
       working-directory: ./Terraform
