--- a/.github/workflows/Terraform.yaml
+++ b/.github/workflows/Terraform.yaml
@@ -45,3 +45,7 @@ jobs:
     - name: Terraform Apply
       run: terraform apply -auto-approve 
       working-directory: ./Terraform
+
+    - name: Terraform destroy
+      run: terraform destroy --auto-approve
+      working-directory: ./Terraform
