--- a/.github/workflows/Terraform.yaml
+++ b/.github/workflows/Terraform.yaml
@@ -46,6 +46,6 @@ jobs:
       run: terraform apply -auto-approve 
       working-directory: ./Terraform
 
-    - name: Terraform destroy
-      run: terraform destroy --auto-approve
-      working-directory: ./Terraform
+    
+    #- run: terraform destroy --auto-approve
+    #  working-directory: ./Terraform
