Update azure-terraform.yaml for Azure Pipelines

--- a/azure-terraform.yaml
+++ b/azure-terraform.yaml
@@ -13,10 +13,6 @@ stages:
         pool:
           vmImage: $(vmImageName)
         steps:
-          - task: TerraformInstaller
-            displayName: install terraform
+          - task: TerraformInstaller@1
             inputs:
-               terraformVersion: latest
-
-
-    
+              terraformVersion: 'latest'
