Update azure-terraform.yaml for Azure Pipelines

--- a/azure-terraform.yaml
+++ b/azure-terraform.yaml
@@ -17,5 +17,4 @@ steps:
 
 - script: |
     terraform init
-    terraform plan -out=terraform.tfplan
-  displayName: 'Terraform Plan'
+    terraform plan
