Update azure-terraform.yaml for Azure Pipelines

--- a/azure-terraform.yaml
+++ b/azure-terraform.yaml
@@ -17,5 +17,6 @@ steps:
 
 - script: |
     terraform init
+    workingDirectory: BackstageAzure/Terraform
     terraform plan
     workingDirectory: BackstageAzure/Terraform
