--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,8 +67,8 @@ stages:
             inputs:
               action: deploy
               manifests: |
-                $(Pipeline.Workspace)/manifests/deployment.yaml
-                $(Pipeline.Workspace)/manifests/service.yaml
+                Kubernetes/manifests/deployment.yaml
+                Kubernetes/manifests/service.yaml
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
