--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,10 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: adityarp
+  name: backstage
+  namespace: default
 spec:
-    type: LoadBalancer
-    ports:
-    - port: 80 
-    selector:
-        app: adityarp
+  type: LoadBalancer
+  selector:
+    app: backstage
+  ports:
+    - name: http
+      port: 3000
+      targetPort: 80
