--- a/azure-terraform.yaml
+++ b/azure-terraform.yaml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: TerraformInstaller@1
   inputs:
-    terraformVersion: 'latest'
+    terraformVersion: '1.4.2'
 
 - task: TerraformTaskV4@4
   inputs:
