--- a/azure-terraform.yaml
+++ b/azure-terraform.yaml
@@ -41,6 +41,7 @@ steps:
 - task: TerraformTaskV4@4
   inputs:
     provider: 'azurerm'
-    command: 'apply- auto-approve'
+    command: 'apply'
+    commandOptions: '-auto-approve'
     environmentServiceNameAzureRM: 'Free Trial(99766108-3d5d-4929-95ce-f17bc0a2ecd3)'
     workingDirectory: Terraform
