Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,7 +13,7 @@ variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '994ab4e8-ea08-415c-8233-8dffda9df73a'
   imageRepository: 'backstage'
-  containerRegistry: 'backstagerp.azurecr.io'
+  containerRegistry: 'backstageacr.azurecr.io'
   dockerfilePath: 'backstageal/Dockerfile.dockerbuild'
   tag: '$(Build.BuildId)'
   imagePullSecret: 'backstagerp103615ce-auth'
